styles.css
* {
  font-family: Arial, Helvetica, sans-serif;
}

body {
  margin: 0px;
  flex-direction: column;
}

.header-hero {
  display: flex;
  flex-direction: column;
  background-color: #1F2937;
  padding: 20px 350px;
  padding-bottom: 100px;
}
/* header */
.header {
  display: flex;
  justify-content: space-between;
  margin-bottom: 80px;
  gap: 10px;
}
.header-logo {
  flex: 1 1 auto;
  font-size: 24px;
  color: #F9FAF8;
  font-weight: 700;
}
.header-nav ul{
  flex: 1 1 0;
  display: flex;
  list-style: none;
  font-size: 18px;
  margin: 0;
  padding: 0;
  gap: 20px;
}
.header-nav a {
  margin: 0;
  padding: 0;
  color: #E5E7EB;
  text-decoration: none;
}
/* hero */
.hero {
  display: flex;
  justify-content: space-between;
  gap: 10px;
}
.hero-content {
  flex: 0 1 auto;
  width: 500px;
  height: 200px;
  display: flex;
  flex-direction: column;
}
.hero-main {
  font-size: 48px;
  font-weight: 700;
  color: #F9FAF8;
}
.hero-secondary {
  font-size: 18px;
  color: #E5E7EB;
  padding: 10px 0px;
}
.hero-image {
  color: #E5E7EB;
  display: flex;
  flex: 0 1 auto;
  width: 500px;
  height: 200px;
  background-color: rgb(72, 74, 84);
  justify-content: center;
  align-items: center;
}
.hero button {
  color: #F9FAF8;
  flex: 0 1 auto;
  background-color: #3882F6;
  border-radius: 5px;
  width: 125px;
  padding: 5px;
  border-color: #3882F6;
  font-size: 18px;
  font-weight: bold;
}
/* info section */
.info-sect {
  display: flex;
  flex-direction: column;
  align-items: center;
  padding: 40px;
}
.info-header {
  flex: 0 1 auto;
  font-size: 36px;
  font-weight: 700;
  color: #1F2937;
}
.info-box {
  display: flex;
  align-items: center;
  gap: 30px;
  padding: 40px;
}
.box {
  width: 175px;
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: center;
  gap: 10px;
}
.box-img {
  width: 150px;
  height: 150px;
  border: 4px solid #3882F6;
  border-radius: 15px;
}
.box-txt{
  text-align: center;
  font-size: 18px;
  color: #505050;
}

